--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,11 @@
-:root {
-    margin: 0;padding: 0;box-sizing: border-box;
+*,
+*::after,
+*::before {
+    margin: 0;padding: 0;box-sizing: inherit;
+}
+
+html {
+    box-sizing: border-box;
 }
 
 body {
@@ -8,7 +14,7 @@ body {
     font-family: 'Kdam Thmor Pro', sans-serif;
     font-family: 'Poppins', sans-serif;
     display: flex;
-    gap: 30%;
+    font-size: 100%;
 }
 
 .station-list {
@@ -22,15 +28,21 @@ body {
     cursor: pointer;
 }
 
+.info-container > *{
+    margin: 1.5rem;
+}
+
 .station-list > *:hover {
     color: steelblue;
 }
 
 .container {
+    display: grid;
+    grid-template-columns: 20rem 2rem;
     width: 33rem;
     position: fixed;
     top: 0;
-    left: 50%;
+    left: 25%;
 }
 
 .container h1 span{
@@ -50,6 +62,28 @@ body {
     margin-top: 4rem;
     display: flex;
     flex-direction: column;
-    width: 50rem;
-    height: 10rem;
+    width: 70rem;
+    height: 15rem;
+}
+
+@media only screen and (max-width: 62.5em) {
+    body {
+        display: block;
+        font-size: 62.5%;
+    }
+
+    .station-list > * {
+        font-size: 1rem;
+    }
+
+    .container {
+        display: block;
+        position: relative;
+        left: 0;
+    }
+
+    .chart-conatiner {
+        width: 30rem;
+        height: 10rem;
+    }
 }
