--- a/src/style.css
+++ b/src/style.css
@@ -66,6 +66,10 @@ body {
     height: 15rem;
 }
 
+.active {
+    color: steelblue;
+}
+
 @media only screen and (max-width: 62.5em) {
     body {
         display: block;
